# omniclip

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs  process.rs
cli/src/commands/: info.rs  mod.rs  run.rs
cli/src/ui/: banner.rs  mod.rs  qr.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  service.rs
core/src/clipboard/: mod.rs
core/src/crypto/: encryption.rs  keys.rs  mod.rs  serde_utils.rs
core/src/discovery/: mod.rs
core/src/protocol/: constants.rs  messages.rs  mod.rs  pairing.rs
core/src/sync/: connection.rs  framing.rs  mod.rs  server.rs
mobile/: pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/kotlin/com/omniclip/mobile/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/models/: paired_device.dart
mobile/lib/screens/: home_screen.dart  scanner_screen.dart
mobile/lib/services/: crypto_service.dart  message_service.dart  sync_service.dart
mobile/lib/utils/: ui_helpers.dart
